[package]
name = "remacro"
version = "0.1.0"
edition = "2021"
description = "A simple utility for creating linux macros."
license-file = "LICENSE"
repository = "https://github.com/OctoRocket/remacro"
keywords = ["macro", "linux", "keyboard", "binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
enigo = "0.1.3"
thiserror = "1.0.50"
