[package]
name = "remacro"
version = "0.1.0"
edition = "2021"
description = "A simple utility for creating linux macros."
license-file = "LICENSE"
repository = "https://github.com/OctoRocket/remacro"
keywords = ["macro", "linux", "keyboard", "binary"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.11", features = ["derive"] }
evdev = "0.12.1"
thiserror = "1.0.50"
